<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.server_config.ConfigurationActivity">

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            android:ems="10"
            android:id="@+id/editTextServerAddress"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:importantForAutofill="no"
            android:hint="@string/server_url"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"/>

    <Button
            android:text="@string/confirm_and_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonSaveConfiguration"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"/>

    <Button
            android:text="@string/test_connection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonTestServerConnection"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextDateStartSync"
            android:layout_marginTop="8dp"/>

    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textViewTestServerConnectionResult"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/buttonTestServerConnection"
            tools:text="Successfully connected to 'philly.local'."
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="invisible"/>

    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textViewTestServerConnectionErrorExplanation"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewTestServerConnectionResult"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Couldn't connect to philly.local"/>

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textShortMessage"
            android:ems="10"
            android:id="@+id/editTextUsername"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/username"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextWorkgroup"
            android:importantForAutofill="no"/>

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textShortMessage"
            android:ems="10"
            android:id="@+id/editTextWorkgroup"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextServerAddress"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/workgroup_domain"
            android:importantForAutofill="no"/>

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editTextPassword"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextUsername"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/password"
            android:importantForAutofill="no"/>

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textShortMessage"
            android:ems="10"
            android:id="@+id/editTextShareName"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/share"
            android:importantForAutofill="no"/>

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/editTextDateStartSync"
            app:layout_constraintTop_toBottomOf="@+id/editTextShareName"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/first_sync_day"
            android:importantForAutofill="no"/>

</androidx.constraintlayout.widget.ConstraintLayout>