<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
                name="viewModel"
                type="com.nzelot.filebase.ui.main_content.MainContentViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.main_content.MainActivity">
        <TextView
                android:text="@string/server_configuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewCurrentServerConfig"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"/>

        <TextView
                android:text="@string/share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView1"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/textViewCurrentServerConfig"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"/>

        <View
                android:id="@+id/divider2"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                android:layout_marginTop="16dp"/>

        <TextView
                android:text="@string/actions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewActions2"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toBottomOf="@+id/divider2"
                android:layout_marginTop="16dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Menu"/>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewActions2"
                android:id="@+id/linearLayout2"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="center_vertical">

            <Button
                    android:text="@string/sync_now"
                    android:layout_height="wrap_content"
                    android:id="@+id/buttonSyncNow"
                    android:layout_width="150dp"
                    android:enabled="@{viewModel.state.shareAvailable &amp;&amp; !viewModel.state.syncOngoing}"
                    android:onClick="@{() -> viewModel.startSyncNow()}"
                    />

        </LinearLayout>

        <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2"/>

        <TextView
                android:text="@string/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewStatus"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/divider"
                android:textAppearance="@style/TextAppearance.AppCompat.Menu"/>

        <ScrollView
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textViewStatus"
                android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="24dp"
                android:id="@+id/scrollViewStatusLog">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/linearLayoutStatusLos">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/textViewStatusLog"
                        tools:text="Status Log"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:fontFamily="serif-monospace"
                        android:textSize="12sp"
                        />
            </LinearLayout>
        </ScrollView>

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textViewCurrentServerAddressValue"
                android:text="@{viewModel.config.address}"
                android:textAppearance="@style/MonospaceText"
                android:ellipsize="end"
                android:singleLine="true"
                android:gravity="end"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                app:layout_constraintStart_toEndOf="@+id/textView1"
                android:layout_marginStart="24dp"
                app:layout_constraintTop_toTopOf="@+id/textView1"/>

        <TextView
                android:text="@string/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@+id/textView1"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                android:text="@string/available"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                android:text="@string/sync_state"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@+id/textView4"/>

        <TextView
                android:text="@string/last_sync"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView5"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@+id/textView2"/>

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textViewCurrentServerUsername"
                android:text="@{viewModel.config.username}"
                android:textAppearance="@style/MonospaceText"
                android:gravity="end"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="32dp"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toTopOf="@+id/textView3"/>

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textViewCurrentServerAvailable"
                android:text="@{viewModel.state.shareAvailable ? @string/connected : @string/not_connected}"
                android:textAppearance="@style/MonospaceText"
                android:gravity="end"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                android:layout_marginStart="32dp"
                app:layout_constraintTop_toTopOf="@+id/textView4"/>

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textViewCurrentServerSyncState"
                android:textAppearance="@style/MonospaceText"
                android:text="@{viewModel.state.syncOngoing ? @string/sync_ongoing : @string/sync_done}"
                android:gravity="end"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                android:layout_marginStart="32dp"
                app:layout_constraintTop_toTopOf="@+id/textView2"/>

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textViewCurrentServerLastSyncValue"
                android:text="@{viewModel.lastSync}"
                android:gravity="end"
                android:textAppearance="@style/MonospaceText"
                app:layout_constraintTop_toTopOf="@+id/textView5"
                app:layout_constraintStart_toEndOf="@+id/textView5"
                android:layout_marginStart="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>